--- a/04-cypress-testing-course-app/styles/global.css
+++ b/04-cypress-testing-course-app/styles/global.css
@@ -11,14 +11,14 @@
 */
 
 #modal {
-  /* display: none; */
+  display: none;
   position: fixed;
   z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  /* overflow: auto; */
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
